# hst-ai-b13b6dc6-d3c6-4441-bbd0-add7c562356a

./: .env.example  .gitignore  README.md  compatibility_checker.py  dependency_resolver.py  main.py  messages.txt  pyproject.toml  requirements.txt  setup_and_run_poetry.bat  setup_and_run_poetry.sh  setup_poetry.py
app/: __init__.py  main.py
app/api/: __init__.py  router.py
app/components/: __init__.py  about.py  ai_demos.py  blog.py  blog_post.py  contact.py  hero.py  layout.py  project_detail.py  projects.py  skills.py
app/core/: __init__.py  config.py  logging.py
app/ui/: __init__.py  components.py  pages.py
